Conectando com bd postgres

--- a/clientes/templates/clientes/detalhes.html
+++ b/clientes/templates/clientes/detalhes.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+    <a href="{% url 'logout' %}">Sair</a>
+
     <h1>Cliente</h1>
     <p>Nome: {{ person.first_name }}</p>
     <p>Sobrenome: {{ person.last_name }}</p>
@@ -15,6 +17,10 @@
     <p>Salário: {{ person.salary }}</p>
     <p>Bio: {{ person.bio }}</p>
     <img src="{{MEDIA_URL}}{{ person.photo }}" alt="Foto" height="200">
+    
+    <br />
+    <a href="{% url 'clientes:update_client' person.id %}">Editar</a>
+    <a href="{% url 'clientes:delete_client' person.id %}">Excluir</a>
     
 </body>
 </html>
