--- a/clientes/templates/clientes/detalhes.html
+++ b/clientes/templates/clientes/detalhes.html
@@ -1,14 +1,12 @@
-{% load static %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cliente</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-    <a href="{% url 'logout' %}">Sair</a>
+{% load static %}
+
+{% block title %}Detalhes{% endblock %}
+
+{% block main %}
+
+    <a href="{% url 'home:sair' %}">Sair</a>
 
     <h1>Cliente</h1>
     <p>Nome: {{ person.first_name }}</p>
@@ -20,7 +18,6 @@
     
     <br />
     <a href="{% url 'clientes:update_client' person.id %}">Editar</a>
-    <a href="{% url 'clientes:delete_client' person.id %}">Excluir</a>
+    <a href="{% url 'clientes:delete_client' person.id %}" class="btn btn-danger">Excluir</a>
     
-</body>
-</html>
+{% endblock %}
