--- a/clientes/templates/clientes/editar.html
+++ b/clientes/templates/clientes/editar.html
@@ -1,21 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editar cliente</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-    <a href="{% url 'logout' %}">Sair</a>
+{% block title %}Editar cliente{% endblock %}
+
+{% block main %}
+
+    <a href="{% url 'home:sair' %}">Sair</a>
     
     <h1>Editar Cliente</h1>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form }}
-        <button type="submit">Salvar</button>
+        <button type="submit" class="btn btn-info" >Salvar</button>
     </form>
     
-</body>
-</html>
+{% endblock %}
