--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Seja bem vindo{% endblock %}
+
+{% block main %}
 
     <h1>Home</h1>
     
@@ -17,5 +13,4 @@
         <a href="{% url 'login' %}">Login</a>
     {% endif %}
 
-</body>
-</html>
+{% endblock %}
