--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,17 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Login{% endblock %}
+
+{% block main %}
+
     <h1>Login</h1>
     <form method="post">
         {% csrf_token %}
         {{form.as_p}}
-        <button type="submit">Login</button>
+        <button type="submit" class="btn btn-info">Login</button>
     </form>
-</body>
-</html>
+
+{% endblock %}
