--- a/clientes/templates/clientes/editar.html
+++ b/clientes/templates/clientes/editar.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load bootstrap %}
 
 {% block title %}Editar cliente{% endblock %}
 
@@ -9,7 +10,7 @@
     <h1>Editar Cliente</h1>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form }}
+        {{ form|bootstrap }}
         <button type="submit" class="btn btn-info" >Salvar</button>
     </form>
     
