--- a/clientes/templates/clientes/novo.html
+++ b/clientes/templates/clientes/novo.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load bootstrap %}
 
 {% block title %}Novo cliente{% endblock %}
 
@@ -9,7 +10,7 @@
     <h1>Novo Cliente</h1>
     <form method="post" action="{% url 'clientes:new_client' %}" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form }}
+        {{ form|bootstrap }}
         <button type="submit" class="btn btn-info">Salvar</button>
     </form>
     
